# workflow_builder_agent

./: .env.example  .gitignore  AGENT_FRAMEWORK_REFERENCE.md  CONTRIBUTING.md  GITHUB_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  IRA_WORKFLOW_ARCHITECTURE.md  LICENSE  MANUAL_TEST_GUIDE.md  ORCHESTRATOR_OUTPUT_REVIEW_EXAMPLE.md  ORCHESTRATOR_USAGE.md  PLANNER_AGENT_COMPLETE.md  PLANNER_TOOLS_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RUN_TEST.md  SETUP_COMPLETE.md  TEST_OUTPUT_REVIEW_README.md  current_progress.md  ira_python_package_readme.md  pyproject.toml  requirements.txt  setup.py  test_code_executor.py  test_coder_agent.py  test_coder_simple.py  test_manual.py  test_my_workflow.py  test_orchestrator.py  test_orchestrator_with_output_review.py
config/: development.yaml  logging.yaml  production.yaml
docs/: API.md
examples/: planner_demo.py
scripts/: setup_dev.sh
src/ira/: __init__.py
src/ira/agents/: __init__.py  base.py  planner.py
src/ira/api/: __init__.py
src/ira/api/middleware/: __init__.py
src/ira/api/routes/: __init__.py
src/ira/exceptions/: __init__.py  errors.py
src/ira/executors/: __init__.py
src/ira/models/: __init__.py
src/ira/storage/: __init__.py
src/ira/tools/: __init__.py  csv_tools.py  validation_tools.py
src/ira/utils/: __init__.py  config.py  helpers.py
src/ira/workflows/: __init__.py
src/ira_builder/: __init__.py  orchestrator.py
src/ira_builder/agents/: __init__.py  base.py  coder.py  planner.py
src/ira_builder/api/: __init__.py
src/ira_builder/api/middleware/: __init__.py
src/ira_builder/api/routes/: __init__.py
src/ira_builder/exceptions/: __init__.py
src/ira_builder/executor/: __init__.py  executor.py
src/ira_builder/executor/core/: base.py  cancellation.py  common.py  func_with_reqs.py
src/ira_builder/executors/: __init__.py
src/ira_builder/models/: __init__.py
src/ira_builder/storage/: __init__.py
src/ira_builder/tools/: __init__.py  code_executor_tools.py  csv_tools.py  validation_tools.py
src/ira_builder/utils/: __init__.py  config.py  logger.py
src/ira_builder/workflows/: __init__.py
storage/generated_code/: Expenses document date for later period v_s posting date in previous period _ qtr_20251016_041248.py  Expenses document date for later period v_s posting date in previous period _ qtr_20251016_041514.py  Simple_Test_Workflow_20251016_030713.py
storage/workflows/: Expenses document date for later period v_s posting date in previous period _ qtr_state.json  Simple_Test_Workflow_state.json
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/fixtures/sample_csvs/: customers.csv  products.csv  sales_data.csv
tests/integration/: __init__.py
tests/unit/: __init__.py  test_csv_tools.py  test_planner.py
